Fix Filter manager row controls shift when tabbing

--- a/src/css/theme-panel.less
+++ b/src/css/theme-panel.less
@@ -932,9 +932,7 @@
         }
 
         .layer-details {
-            //float: left;
             width: 100%;
-            overflow: hidden;
             height: 32px;
 
             .layer-image-box {
